# Operating-Systems-for-Susu

./: .gitattributes  .gitignore  CMakeLists.txt  build.bat
lab2/: hello.c  main.c
lab3/QtLab3/: CMakeLists.txt  fcfs.cpp  fcfs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processscheduler.cpp  processscheduler.h  rr.cpp  rr.h  systemclock.cpp  systemclock.h
lab4/: main.c
lab4/QtLab4/: CMakeLists.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sharedstate.cpp  sharedstate.h  threadgeneratestring.cpp  threadgeneratestring.h  threadreaderstring.cpp  threadreaderstring.h
lab5/: heap_map.c  heap_map.h  main.c  main.h  unit_test.c  unit_test.h
tools/: read_input.c  read_input.h
