
cmake_minimum_required(VERSION 3.10)
project(Operating-Systems)

set(CMAKE_CXX_STANDARD 11)

function(setup_target TARGET)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/${TARGET})
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/${TARGET})

  file(GLOB_RECURSE SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}/*.c)

  file(GLOB_RECURSE SRC_TOOLS
    ${CMAKE_CURRENT_SOURCE_DIR}/tools/*.c)

  add_executable(${TARGET} ${SRC_FILES} ${SRC_TOOLS})

  target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endfunction(setup_target TARGET)

function(setup_lab2)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/lab2)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/lab2)
  add_executable(lab2 ${CMAKE_CURRENT_SOURCE_DIR}/lab2/main.c)

  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/lab2)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/lab2)
  add_executable(hello ${CMAKE_CURRENT_SOURCE_DIR}/lab2/hello.c)
endfunction(setup_lab2)

setup_lab2()
setup_target(lab4)
setup_target(lab5)
